--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node backend/server.ts",
     "server": "nodemon backend/server.ts"
-
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +13,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.3.5"
   }
 }
